performanceImprovement: use Integer.valueOf instead of using constructor.